--- a/src/resources/views/productDetail.hbs
+++ b/src/resources/views/productDetail.hbs
@@ -15,7 +15,7 @@
         <span class='parameters_tt'>Mô tả: </span>
         <span class='sp_description'>{{product.description}}</span>
       </div>
-      <div class='sp_detai_price'>{{product.price}} VND</div>
+      <div class='sp_detai_price'>{{formatMoneyVnd product.price}}</div>
       <div class='sp_detail_order clearfix'>
         <div class='sp_detail_order_num'>
           <span class='tt_num_order'>Số lượng:</span>
