--- a/src/resources/views/products/create.hbs
+++ b/src/resources/views/products/create.hbs
@@ -1,7 +1,10 @@
 <div class='mt-4'>
   <h3>Đăng sản phẩm mới</h3>
 
-  <a href='/admin/products/show' class='btn btn-primary'>Quay lại</a>
+  <a href='/admin/products/show' class='btn btn-primary'>
+    <i class='fa-solid fa-arrow-left'></i>
+    Quay lại
+  </a>
 
   <form class='mt-4' method='POST' enctype='multipart/form-data' action='/admin/products/create'>
     <div class='row'>
