--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -31,7 +31,7 @@
             Vinh Nguyen
           </a>
           <ul class='dropdown-menu' aria-labelledby='navbarDropdown'>
-            <li><a class='dropdown-item' href='admin/products/show'>Quản lý sản phẩm</a></li>
+            <li><a class='dropdown-item' href='/admin/products/show'>Quản lý sản phẩm</a></li>
             <li><hr class='dropdown-divider' /></li>
             <li>
               <a class='dropdown-item' href='/me/stored/courses'>
@@ -50,8 +50,7 @@
         </li>
         <li class='nav-item'>
           <a class='nav-link' href='#'>
-            Giỏ hàng
-            <i class='ti-shopping-cart-full'></i>
+            <i class='fa-solid fa-cart-shopping'></i>
             (0)
           </a>
         </li>
