--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -11,6 +11,28 @@ a {
   text-decoration: none;
 }
 
+.nav-icon-cart {
+  padding-top: 11px;
+}
+
+.navbar-cart-icon {
+  position: relative;
+}
+
+.badge {
+  position: absolute;
+  top: -1px;
+  right: -9px;
+  padding: 0 6px;
+  height: 1rem;
+  line-height: 1rem;
+  border-radius: 10px;
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: white;
+  background-color: #c8b964;
+}
+
 .card-product-item {
   margin-top: 16px;
 }
@@ -336,5 +358,5 @@ a {
 }
 
 .sp_description {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
 }
