--- a/src/resources/views/products/productDetail.hbs
+++ b/src/resources/views/products/productDetail.hbs
@@ -29,7 +29,7 @@
         </div>
         <div class='sp_detail_order_btn'>
           <input type='hidden' name='qtyItem-2228' value='1' />
-          <a href='' class='btn_web btn-animation-add-to-cart'>
+          <a href='/cart/add-to-cart/{{product._id}}' class='btn_web btn-animation-add-to-cart'>
             <span>Thêm vào giỏ hàng</span>
           </a>
         </div>
