--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<div id='footer'>
+{{! <div id='footer'>
   <div class='socials-list'>
     <a href=''><i class='ti-facebook'></i></a>
     <a href=''><i class='ti-instagram'></i></a>
@@ -9,4 +9,4 @@
   </div>
 
   <p class='copyright'>Powered by <a href=''>w3.css</a></p>
-</div>
+</div> }}
