--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -11,6 +11,19 @@ a {
 }
 
 /* Navbar */
+.navbar {
+  background-color: #fff;
+  box-shadow: 0px 3px 10px 0.5px rgb(0 0 0 / 5%);
+}
+
+.navbar-color {
+  color: rgb(145, 145, 145);
+}
+
+.navbar-color:hover {
+  color: rgb(0, 66, 128);
+}
+
 .btn-link {
   text-decoration: none;
 }
@@ -25,13 +38,13 @@ a {
 
 .badge {
   position: absolute;
-  top: -1px;
-  right: -9px;
+  top: 1px;
+  right: -4px;
   padding: 0 6px;
   height: 1rem;
   line-height: 1rem;
   border-radius: 10px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 400;
   color: white;
   background-color: #c8b964;
@@ -51,6 +64,140 @@ a {
 .select-all-options {
   width: 160px;
   margin: 0 16px;
+}
+
+/* Dropdown custom */
+.dropdown-menu {
+  padding: 0;
+}
+
+.navbar-nav .custom-dropdown {
+  box-shadow: 0 15px 30px 0 rgb(0 0 0 / 20%);
+  border: 1px solid transparent !important;
+  transition: 0.3s margin-top ease, 0.3s opacity ease, 0.3s visibility ease;
+}
+
+.custom-dropdown .dropdown-item {
+  padding: 15px 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  font-size: 15px;
+}
+
+.dropdown-menu[data-bs-popper] {
+  left: -40px;
+}
+
+/* Home product */
+.list-item {
+  position: relative;
+}
+
+.list-item .item {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  position: relative;
+  padding-bottom: 0.2777777777777778rem;
+}
+
+.list-item .item:after {
+  content: '';
+  position: absolute;
+  width: calc(100% - 30px);
+  left: 15px;
+  bottom: 0;
+  height: 0.2777777777777778rem;
+  background-color: #c8b964;
+  transition: all 0.3s ease-in-out;
+}
+
+.list-item .item:hover:after {
+  background-color: #004280;
+}
+
+.link_img {
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  display: block;
+}
+
+.list_item .link_img > img {
+  width: 100%;
+  height: 14.44444444444444rem;
+  object-fit: cover;
+  object-position: center center;
+}
+
+.link_img img {
+  height: 10.1rem;
+  width: 16.111111rem;
+}
+
+.hover_web {
+  background-image: url(../images/mask_media.png);
+  background-size: 100% 100%;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.col-lg-3 .bg_normal {
+  height: 12.77777777777778rem;
+  width: 16.11111111111111rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.hover_web span {
+  display: block;
+  width: 3rem;
+  height: 3rem;
+  background-color: #c8b964;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 100%;
+  font-size: 1em;
+  font-weight: 300;
+}
+
+.hover_web span i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.item:hover .hover_web {
+  opacity: 1;
+}
+
+.box_item_new {
+  position: relative;
+  padding-top: 2.1rem;
+}
+
+.title_link {
+  font-size: 1em;
+  font-weight: 600;
+  text-align: center;
+  margin: 0.8rem 0 0;
+  height: 2.6rem;
+  overflow: hidden;
+}
+
+.title_link a {
+  color: black;
+}
+
+.sp_price {
+  color: #000;
+  font-weight: 600;
+  text-align: center;
+  font-size: 1.222222222222222em;
+  margin: 1rem 0 1.2rem 0;
 }
 
 /* Footer */
