--- a/src/resources/views/products/create.hbs
+++ b/src/resources/views/products/create.hbs
@@ -56,10 +56,4 @@
   </div>
 {{/if}}
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() { const inputFile = document.getElementById('myFile'); const
-  previewContainer = $('#imagePreview'); const previewImage = $('.image-preview__image');
-  inputFile.addEventListener('change', function() { const file = this.files[0]; if(file) { const reader = new
-  FileReader(); previewImage.css('display', 'block'); reader.addEventListener('load', function() {
-  previewImage.attr('src', this.result); }); reader.readAsDataURL(file); } }) })
-</script>
+<script src='/javascripts/createProduct.js' type='text/javascript'></script>
