[Impelment] Delete shopping cart

--- a/src/resources/views/carts/shopping-cart.hbs
+++ b/src/resources/views/carts/shopping-cart.hbs
@@ -47,7 +47,7 @@
           <div class='tbl-sum list-info'>
             <p class='price'>{{formatMoneyVnd this.price}}</p>
           </div>
-          <a class='close' href='javascript:void(0);' onclick="updateCart('6832a7b24bc06775d02b7406880b93fc',1,'x');">
+          <a class='close' href='/cart/delete/{{this.item._id}}'>
             <i class='fa-solid fa-xmark'></i>
           </a>
         </li>
@@ -70,7 +70,7 @@
       <a href='/' class='btn_web' id='btnBuyMore'>
         <span>Mua thêm sản phẩm</span>
       </a>
-      <a href='https://minhlong.com/vi/thong-tin-cua-ban.html' class='btn_web'>
+      <a href='#' class='btn_web'>
         <span>Tiến hành thanh toán</span>
       </a>
     </div>
