--- a/src/resources/views/carts/shopping-cart.hbs
+++ b/src/resources/views/carts/shopping-cart.hbs
@@ -70,7 +70,7 @@
       <a href='/' class='btn_web' id='btnBuyMore'>
         <span>Mua thêm sản phẩm</span>
       </a>
-      <a href='#' class='btn_web'>
+      <a href='/order/show' class='btn_web'>
         <span>Tiến hành thanh toán</span>
       </a>
     </div>
