--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -37,7 +37,7 @@
                 </li>
               {{/if}}
               <li>
-                <a class='dropdown-item' href='/me/stored/courses'>
+                <a class='dropdown-item' href='/order/my-order'>
                   <i class='fa-solid fa-bag-shopping me-2'></i>
                   Đơn hàng của tôi
                 </a>
